--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
         <%= link_to posts_path do %>
         <span class="header-title">
-          <ruby>ACTIVE<rt class="active-rt">アクティブ</rt></ruby>
+          ACTIVE
         </span>
         <% end %>
         <% if user_signed_in? %>
