--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,1 @@
-<%= form_for(current_user.active_follows.find_by(following_id: @user.id), html: { method: :delete }) do |f| %>
-  <%= f.submit "Unfollow", class: "btn" %>
-<% end %>
+<%= link_to 'フォロー済', follow_path(@user.id) ,method: :delete, remote: true, class: "btn btn-default" %>
