sign_in gamen op tuika

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -170,6 +170,7 @@
 .mypage-edit-main{
   background-image: url(sea8.jpg);
   height: 605px;
+  position: relative;
 }
 .mypage-edit-main-title{
   text-align: center;
@@ -326,22 +327,6 @@
         top: 0;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
