--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -246,7 +246,7 @@
 	background-color: #FFF;
 	display:  block;
   	position:  relative;
-  	animation: anime3 1s ease;
+  	animation: anime3 1s ease ;
 }
 @keyframes anime3 {
     0% {
@@ -335,7 +335,9 @@ input.btn-lg{
 	box-shadow: rgba(0,0,0,0.7) 3px 3px 10px;
 	display:  block;
   	position:  relative;
-  	animation: anime3 1s ease;
+  	animation: anime3 1s ease forwards;
+}
+.post-show-comments:hover{
 }
 @keyframes anime3 {
     0% {
@@ -447,6 +449,8 @@ input.mt-10{
 	display: inline-block;
 	color: #000;
 	transition-duration: 0.3s;
+  	position:  relative;
+  	animation: anime3 1s ease;
 }
 .search-main-card:hover{
 	-ms-transform: translateY(5px);
@@ -486,6 +490,7 @@ input.mt-10{
 	padding-right: 20px;
 	margin-bottom: 10px;
 }
+
 
 
 
