/image/ tuika  public/images/ idou

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,7 +6,7 @@
 		/*post-new*/
 
 .post-new-main{
-	background-image: url(zimen1.jpg);
+	background-image: url(/images/zimen1.jpg);
 	background-attachment: fixed;
 
 }
@@ -136,7 +136,7 @@
 
 
 .index-main{
-	background-image: url(beach1.jpg);
+	background-image: url(/images/beach1.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 	height: 100%;
@@ -227,7 +227,7 @@
 
 
 .post-show{
-	background-image: url(renga2.jpg);
+	background-image: url(/images/renga2.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 }
@@ -354,7 +354,7 @@ input.btn-lg{
 	color: #FFF;
 }
 .post-show-comments-main{
-	background-image: url(line2.jpg);
+	background-image: url(/images/line2.jpg);
 	background-size: cover;
 	display: block;
 	overflow:auto ;
@@ -412,7 +412,7 @@ input.mt-10{
      /*post-search*/
 
 .search-main{
-	background-image: url(yama1.jpg);
+	background-image: url(/images/yama1.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 	height:auto!important;
