--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,7 +7,7 @@
 
 .mypage-main{
   padding-bottom: 20px;
-  background-image: url(meisai.jpg);
+  background-image: url(/images/meisai.jpg);
   background-size: cover;
 }
 .mypage-main-user-title{
@@ -168,7 +168,7 @@
     /*////   user-edit   ////*/
 
 .mypage-edit-main{
-  background-image: url(sea8.jpg);
+  background-image: url(/images/sea8.jpg);
   height: 605px;
   position: relative;
 }
@@ -228,7 +228,7 @@
     /*////   user-show-follower   ////*/
 
 .user-follors{
-  background-image: url(sea1.jpg);
+  background-image: url(/images/sea1.jpg);
   background-attachment: fixed;
   background-size: cover;
   padding-bottom: 20px;
@@ -297,7 +297,7 @@
   padding-bottom: 20px;
   padding-right: 120px;
   padding-left: 120px;
-  background-image: url(snow1.jpg);
+  background-image: url(/images/snow1.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
