--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -7,7 +7,7 @@
 			<%= link_to post_path(favorite.post.id) do %>
 				<div class="index-main-card">
 					<span class="index-main-card-span">
-						<%= attachment_image_tag favorite.post.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+						<%= attachment_image_tag favorite.post.user, :profile_image, format: 'jpeg', fallback: "/images/no_image.jpg", size: "40x40" %>
 					</span>
 					<span class="index-main-card-username"><%= favorite.post.user.username %></span>
 					<div class="index-main-card-posts-image">
