--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,7 @@
 		<h2 class="post-new-main-user-title">TODAY ACTIVE!</h2>
 		<div class="post-new-userimage">
 			<img id="avatar_img_prev" src="#" class='hidden' />
-			<%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "170x170", class: 'avatar_present_img'%>
+			<%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "/images/no_image.jpg", size: "170x170", class: 'avatar_present_img'%>
 			<div class="preview" /></div>
 		</div>
 			<p class="post-new-username"><%= @user.username %></p>
