--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -7,7 +7,7 @@
 		<%= link_to post_path(search.id) do %>
 			<div class="search-main-card">
 				<span class="search-main-card-span">
-					<%= attachment_image_tag search.user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "40x40" %>
+					<%= attachment_image_tag search.user, :profile_image, format: 'jpeg', fallback: "/images/no_image.jpg", size: "40x40" %>
 				</span>
 				<span><%= search.user.username %></span>
 				<div class="search-main-card-posts-image">
