--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 					<span><%= @user.username %></span>
 				</div>
 				<div class="mypage-main-user-option-image">
-					<%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg", size: "200x200" %>
+					<%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "/images/no_image.jpg", size: "200x200" %>
 				</div>
 				<div class="mypage-main-user-option-email">
 					<span><%= @user.email %></span>
